Fix header overflow on the last element

--- a/src/styles/components/Header.pcss
+++ b/src/styles/components/Header.pcss
@@ -119,6 +119,11 @@
           }
         }
       }
+
+      & > li.hasDropdown:nth-last-child(2) div.btnHover:after {
+        content: none;
+      }
+
     }
   }
 
